# Model-Context-Protocal

./: .env  .gitignore  README.md  agent.py  client.py  learnings.md  main.py  pyproject.toml  requirements.txt
servers/: math_mcp.py  weather_mcp.py
